added references list

--- a/ytube/_data/lists/AI-keys.yml
+++ b/ytube/_data/lists/AI-keys.yml
@@ -1,7 +1,9 @@
 --- 
 - BrNs0M77Pd4 # Artificial Intelligence: it will kill us | Jay Tuck | TEDxHamburgSalon
+- Njbze8cS8WE # How Technology Will Take Your Job and Create God
 - mQO2PcEW9BY # A.I. is Progressing Faster Than You Think!
 - LPT4r4AnFZA # The inevitable merger of IQ and EQ in technology - Rana el Kaliouby (Affectiva)
+- R_5sAburz5Q # Why AI Is The Most Dangerous Thing You Can Imagine
 - aR5N2Jl8k14 # The incredible inventions of intuitive AI | Maurice Conti
 - HX6M4QunVmA # The Robot Revolution: The New Age of Manufacturing | Moving Upstream
 - JOY2k7Vu9Dw # Why AI needs emotion - Rana El Kaliouby (Affectiva)
