--- a/ytube/_data/lists/french-keys.yml
+++ b/ytube/_data/lists/french-keys.yml
@@ -1,5 +1,6 @@
 --- 
 - Abz3Ab9HhaQ # Ces financiers qui dirigent le monde - BlackRock | ARTE
+- Q8qZvtreTck # Water, Le Pouvoir Secret de l'Eau // Extrait 20min Officiel (HD) - VF
 - Ho5TzMP6DxE # Se confronter à la réalité entrepreneuriale - Oussama Ammar, co-fondateur de The Family
 - tH5EMxQbrQg # COLLAPSE | The Resistance Organizes
 - kWKB46mgSSE # Un banquier suisse explique en 36 minutes larnaque de la creation monetaire - BémoB
