--- a/ytube/_data/lists/healing-keys.yml
+++ b/ytube/_data/lists/healing-keys.yml
@@ -3,6 +3,7 @@
 - _TokqrtFfi8 # The Most Powerful Strategy for Healing People and the Planet | Michael Klaper | TEDxTraverseCity
 - J-I2eScPkEw # How healthy living nearly killed me | AJ Jacobs
 - BFbCYOfxOnI # Nassim Haramein Unified Field Theory / Theory of Everything [FULL VIDEO]
+- 3soroEZ3yBk # Sadhguru - Learn How To Sleep Correctly | TRY IT TONIGHT!
 - YhDB37KwNv8 # Zero Point Energy Healing tools - Part 2
 - XT5hoymUjio # Quantum Healing - Anything Is Possible!  Part 1
 - xexh4DUQWT4 # matrix 2 point new
@@ -29,15 +30,18 @@
 - UiTWh7bsy5M # Understanding Plasma Science Part 1 - September 25, 2017
 - qJq8IovXFYQ # How to never stress again | Abraham Twerski
 - I_j-tBJ3Kss # Coconut Oil Kills - Ultra Spiritual Life episode 66
+- X_fHa73_nOg # How to Reduce Sleep Quota and Increase Sleep Quality? - Sadhguru
 - RDhfLsar1WU # What happens after the kundalini is awakened?
 - hLysFxVm0fg # La technique des petits bonshommes allumettes Lucie Bernier Jacques Martel
 - vpTHi7O66pI # How to green the world&#39;s deserts and reverse climate change | Allan Savory
 - i2ZT87vHrQQ # Your Mind Can Transform Your Body and Cure Everything
 - tJlzdCPJorE # Self Re-Parenting Techniques and Inner Child Work for Healing Attachment Trauma
 - f95pBI3-qD0 # divine-balance-healing (by Serge Kahili King)
+- LNyJgNjCDuU # How Do You Stop the Mind's Chatter? - Sadhguru
 - f78cZ7O0DpY # Quantum Meditation (2 of 4) - Quantum Field As It Occurs in Real Meditation (EN/JP)
 - 4aTHDVyw6RM # HO&#39;OPONOPONO et bonhommes allumettes pour les problèmes affectifs et les liens d attachement
 - p_4UPdFqgIQ # Can ageing be delayed, stopped or even reversed? BBC News
 - Wlbnar1HrPQ # Covidence webinar (complete 1hr) Tuesday 1 March (pm slot)
+- Gu-F5-oIpUM # Insomnia: The Different Kinds & A Few Solutions | Sadhguru
 - htCe7qytORQ # DARPAN - Accueillir une couche de peine (extrait)
 - GUbEgg6GklU # Gregg Braden, Bladder Cancer dissolves in less than 3 minutes using The Language of Emotion
