--- a/ytube/_data/lists/medit-keys.yml
+++ b/ytube/_data/lists/medit-keys.yml
@@ -1,4 +1,6 @@
 --- 
+- 0GuCDLdrvkA # Durgaashtakam - Peaceful Music For Protection, Healing, Relaxation and Meditation
+- XplRXNxPLEY # Alan Watts - Tap Into Your True Self | 432hz | Frequency Meditation
 - ausD8Z422as # Dhafer Youssef - Khira "Indicium Divinum" (Elegy for my mother)
 - 8sYK7lm3UKg # OM Chanting @417 Hz | Removes All Negative Blocks
 - TAESZsLJdVw # Crystal Chakra Meditation with Antique Tibetan Singing Bowls
@@ -10,6 +12,7 @@
 - K4ccN__EwAM # Schamanentrommel - 30 Minuten Heiltrommel für schamanische Reisen
 - 5cV5DHaVKv4 # Byron Metcalf  - Heart Warriors
 - zHDrHRmaQjQ # Anilah - Medicine Chant
+- NyKntOXIINI # Alan Watts ~ Listen & Breathe (Guided Meditation)
 - DLQD47iDb18 # 639 Hz ❯ LOVE &amp; COMPASSION SOUNDBATH ❯ Heart Chakra Healing Frequency Music ❯ Pure Miracle Tone
 - pzm9bF9oLqw # Flaer Smin ~ Wish U Were Here
 - zwTGyO3MdP4 # Mantras for Deep Inner Peace | 8 Powerful Mantras
