--- a/ytube/_data/lists/mkl-music-keys.yml
+++ b/ytube/_data/lists/mkl-music-keys.yml
@@ -4,22 +4,22 @@
 - 67Y2qD_rtJ8 # Una Noche Más - Yasmin Levy - Spanish &amp; Persian Lyrics
 - yILuW4npZWg # Sterling Angel ~ Sexuality
 - c1_QDYh22G4 # Tango improvisation &quot; Crazy in Love - Beyoncé&quot;
-- hDWVPcwOpvA&list=danceable # Tanghetto - Blue Monday (videoclip)
+- hDWVPcwOpvA # Tanghetto - Blue Monday (videoclip)
 - EuGUFkAxw88 # Andrew Rayel feat. Emma Hewitt - My Reflection (Official Music Video)
 - dIvpuY4XT-8 # LP - Suspicion
 - nJX0o_q3xeA # Do i Wanna know? Tango and gancho by Charlotte &amp; Cedric
 - Snj93QT82rg # Bebe - Siempre Me Quedara (translated)
 - ldGFeiWmFFw # Libertango - Trio Garufa
-- Bhi9GU6xzDI&list=nuevo # René Aubry - Chaloupée
+- Bhi9GU6xzDI # list=nuevo # René Aubry - Chaloupée
 - s7x7vOjfqD4 # John Powell - Assassin&#39;s Tango
 - aHjpOzsQ9YI # Crystallize - Lindsey Stirling (Dubstep Violin Original Song)
 - GkbfKLqTDrw # Club des Belugas - Tarrango
 - dqRwxzzh7lU # sex-music-entertainment-pros-tango-love #48
-- 9Pes54J8PVw?list=RD9Pes54J8PVw
+- 9Pes54J8PVw # list=RD9Pes54J8PVw
 - mxkMlS2nuU8 # India.Arie - Ready For Love
 - hwDosltYWTo # Otros Aires - Allerdings
 - PDBCg5qeSqs # Solitude _ Buddha Bar
-- I14t0nrwm9w&list=nuevo # PARIS (electrotango felino)
+- I14t0nrwm9w # list=nuevo # PARIS (electrotango felino)
 - 1xpkRj99FH0 # Sanvean (I am your shadow) - Lisa Gerrard
 - 01WukohheHQ # Francesca Gagnon - Querer
 - fNk9rvacryo # Mr And Mrs Smith Soundtrack - Assassin&#39;s Tango
@@ -54,7 +54,7 @@
 - lORuAFs6nmQ # Nuevo Tango Fusion
 - eSg9B_plTtA # GALLO CIEGO -  PUGLIESE
 - Ys5xfdn5rlo # Dead Can Dance - Song of the Stars (Pina version)
-- oIMDjf_KX2U&list=tango # 11.04.2015 - Tanda Of The Day - Juan Carlos Cáceres (Candombe)
+- oIMDjf_KX2U # &list=tango # 11.04.2015 - Tanda Of The Day - Juan Carlos Cáceres (Candombe)
 - dlagEN3eoAk # El Tango De Roxanne -  Dj Mari Ferrari rmx
 - H_b7eMBB1c8 # 05 The Perfect Tango - Album: Perfect Tango
 - HTEPWzYGxHw # 02 Reflejo de Luna - Alacran
@@ -64,7 +64,7 @@
 - EiyPRqP5glY # Transcendence Music Video - Lindsey Stirling
 - uzurqBnALkw # Yann Tiersen - La Valse d&#39;Amélie [Original]
 - SiXBVzeMuLQ # Tango Compás 10 Mix by Sergo
-- fAqtI9XgQi
+- fAqtI9XgQic
 - s7CWRaYgFmc # Gotan Project  - &quot;Epoca&quot; Sensual Tango
 - Y7A5Ca4ZX8o # Asi se baila il tango...(Veronica Verdier)Bailongo...
 - 47D9Ne5Vbj8 # Sur, Troilo/Manzi, Forbidden Tango, Camilo Ferrer  ,bandoneón, Australia 2015
@@ -101,15 +101,15 @@
 - yltdjE5hE2o # Ashram - Tango Para mi Padre y Marialuna
 - bM_7m4vTPng # Touch &amp; Go - Straight To Number One
 - O-zCffz8KxM # Sterling Angel ~  Sacrifice (2009)
-- 8HrMB0Opsa4&list=tango-experimental # Tango Sensual - Vuelvo Al Sur
+- 8HrMB0Opsa4 # list=tango-experimental # Tango Sensual - Vuelvo Al Sur
 - K5KAc5CoCuk # Indila - Dernière Danse (Clip Officiel)
-- ME6mhBlSmLc&list=tango # Hugo Diaz - Guitarra Mia
+- ME6mhBlSmLc # list=tango # Hugo Diaz - Guitarra Mia
 - GBXckflFSDs # Tango Nuevo A Paris Claudia Miazzo &amp; Jean Paul Padovani
 - UiHmeHZAc0s # JT Coldfire - She&#39;s Crazy
 - NvryolGa19A # Yann Tiersen - Comptine d`un autre ete - l`apres-midi
-- 60ItHLz5WEA&list=tango # Mix – 60Ithlz5wea
+- 60ItHLz5WEA # list=tango # Mix – 60Ithlz5wea
 - Vu6DRxC6pVA # Heart Tango
-- 0op_NvONyUI&list=danceable # Rene Aubry - Courant D&#39;air
+- 0op_NvONyUI # list=danceable # Rene Aubry - Courant D&#39;air
 - Az4AeKL6seY # Eyes of the Needle - Sia (legendado) - Game Of Thrones
 - zh0CiZ4ZGJI # The Eerie Waltz &amp; Tango Playlist - Dark Cabaret Style
 - lu5u17H9rtc # I FEEL YOU
@@ -136,14 +136,14 @@
 - _uvE32Zbi8I # Bihter Behlul tango sahnesi  [ Forbidden Love Tango ]
 - x5SHpHDRtOc # Fifty Shades of Tango - The Weeknd Earned It - Argentine Tango Julia Juliati &amp; Ronny Dutra
 - Z56yMmoH8kw # Camille - Je ne Mâche pas mes mots | Live Plus Près De Toi
-- Lhu0FF5MEg0&list=nuevo # Tango Chillout - La Cumparsita
-- Ql1FEP0aWaM&list=danceable # Tanghetto  Inmigrante.Tango Electronico
+- Lhu0FF5MEg0 # list=nuevo # Tango Chillout - La Cumparsita
+- Ql1FEP0aWaM # list=danceable # Tanghetto  Inmigrante.Tango Electronico
 - vr-whWr6nz8 # Tango - Billie Jean - C&amp;C
 - M0x-NWrffx0 # I Hate You For It - Chad Brownlee (HD Uncut Version)
 - WPVv-Jjb0wQ # Craig Connelly &amp; Christina Novelli - Black Hole [Official Music Video]
 - 5t5QSiydF9Y # Lamb - Wise Enough
 - S5NPriAa8so # Albert Cummings - Lonely Bed
-- Bkf9qqnu9cE&list=danceable # Neo Tango - C &amp; C - California Dreaming
-- K70Lh3ALWeg&list=nuevo # Sterling Angel - Tears of Heaven
+- Bkf9qqnu9cE # list=danceable # Neo Tango - C &amp; C - California Dreaming
+- K70Lh3ALWeg # list=nuevo # Sterling Angel - Tears of Heaven
 - G74c8j-qZ7w # Amadeus - Unstoppable
-- BchURHicdUw&list=tango # Tango D&#39;Amor - Tango Jointz
+- BchURHicdUw # list=tango # Tango D&#39;Amor - Tango Jointz
