--- a/ytube/_data/lists/nature-keys.yml
+++ b/ytube/_data/lists/nature-keys.yml
@@ -4,4 +4,10 @@
 - pvyoLAwchg4 # Calming Music for Cats = The Sounds of Nature and Beautiful Bird Song
 - eMWeQWGla0Y # Tranquil Birdsong, 11 hours - Birds Chirping, nature sounds, natural sound of birds singing
 - Qm846KdZN_c
+- u9v_MpcUPdg # Paul Stamets — How Mushrooms Can Save You and (Perhaps) the World | The Tim Ferriss Show (Podcast)
 - s9dbAfjlrks # Robin Birds Chirping and Singing - Beautiful Bird Sounds and Bird Song
+- Un2yBgIAxYs # How trees talk to each other | Suzanne Simar
+- _tjt8WT5mRs # The Earth's Internet: How Fungi Help Plants Communicate
+- XI5frPV58tY # 6 ways mushrooms can save the world | Paul Stamets
+- M9joL8spvS8 # Psilocybin Mushrooms and the Mycology of Consciousness: Immersion into the MycoVerse
+- vFWxWq0Fv0U # Paul Stamets: Psilocybin Mushrooms & The Mycology of Consciousness
