--- a/ytube/_data/lists/quantum-keys.yml
+++ b/ytube/_data/lists/quantum-keys.yml
@@ -2,6 +2,7 @@
 - w7398u8G588 # Jarrod McClean: &quot;Quantum Computation for the Discovery of New Materials and [...]&quot; | Talks at Google
 - s8N_ETizx0o # The Quantum Theory of Consciousness Has Undeniable Proof of Afterlife
 - 5vOU6-1yNZs # Journey through the universe beyond the speed of light [HD]
+- xJsl_klqVh0 # The Connected Universe | Nassim Haramein | TEDxUCSD
 - HfVi7iF9mjA # Does the quantum theory bother you? Lieven Vandersypen at TEDxBreda
 - rUWfod_8JsM # Michio Kaku: How to Program a Quantum Computer
 - JKhrDgpX_mc # D-Wave&#39;s Eric Ladizinsky on the future of quantum computing
@@ -13,6 +14,7 @@
 - V9KnrVlpqoM # Quantum physics and consciousness
 - KWGaT6zWG6I # 11 Year Old Genius in College Studying Quantum Physics
 - 4C5pq7W5yRM # Quantum Physics Debunks Materialism
+- 2ET7mQFgNk0 # The Truth About Quantum Consciousness - Full Documentary
 - e67nFfiYQzk # The magical world of quantum physics | Yameng Cao | TEDxGhent
 - iYESkqXVWa0 # About iyeska
 - aUuaWVHhx-U # Can we make quantum technology work? | Leo Kouwenhoven | TEDxAmsterdam
@@ -21,6 +23,7 @@
 - PqN_2jDVbOU # Geordie Rose - Quantum Computing: Artificial Intelligence Is Here
 - jQ7qJoK7YAY # La science quantique utilisé par les magiciens
 - 7u_UQG1La1o # Easy Quantum Mechanics
+- 3ZPVp0NGEYY # Nassim Haramein - The Field of Boundless Information - Quantum University
 - MzznzpAEsf8 # Theory of Life - Spiritual Awakening - Spirit Science of Quantum Physics Consciousness &amp; Reality
 - 6yaY4Fw-ovM # We’re Close to a Universal Quantum Computer, Here’s Where We&#39;re At
 - ARWBdfWpDyc # Quantum Physics for 7 Year Olds | Dominic Walliman | TEDxEastVan
