--- a/ytube/_data/lists/spiritual-keys.yml
+++ b/ytube/_data/lists/spiritual-keys.yml
@@ -1,17 +1,23 @@
 --- 
+- TM6WKeZ43s4 # This Trick Makes You Immune To Illness | Wim Hof on Impact Theory
 - y4Dz1zFEy4E # The most realistic brain visualization ever made. Visualisation du cerveau
 - HTNn0jMqf8Q # What Gives More Pleasure Than Sėx? Answered by Swami Sri Yukteswar || Brahmacharya ||
 - UAnySx2lHC8 # THIS MAN DIED DURING SURGERY, MET GOD &amp; ASKED HIM, &quot;WHAT&#39;S THE MEANING OF LIFE?&quot;
 - pAVNzsO4g9w # Arnaud Desjardins : Un bonheur non dépendant
 - zW2c1SPyy6I # INDIA 100 YEARS AGO SOME RARE PICS
 - 5hfzEAEMEyY # This Monk Will Change Your Worldview -  A Chilling Message By Jay Shetty
-- GdZm0AYA_1Y?list=PLCUuq-GTh5ix_s_n6soy4vkpYdf2IKosc
+- GdZm0AYA_1Y # ?list=PLCUuq-GTh5ix_s_n6soy4vkpYdf2IKosc
 - NuGayjTvwHU # The World&#39;s Most Dangerous Meditation (Intro to Meditation Part 4/4)
 - UyXxGK-hwh4 # Sound Frequencies in Water: A=440 Hz &amp; A=432Hz Using Sine, Square &amp; Sawtooth Waves
 - 2P7XGQBk75g # GREAT SAINTS OF INDIA
 - XBEQXgUyR2c # FRB 121102 Audio Analysis
+- XqzBF4NREWk # From Ego Mind To God Consciousness
+- QdzaR0FA7Co # Nassim Haramein on the Arrow Of Time & Spacememory
+- hBl0cwyn5GY # Banned TEDTalk about Psychic Abilities | Russell Targ | suespeaks.org
 - GxmcA0ZbWa0 # You Might Question EVERYTHING After Watching This! (2018-2019)
 - EGWGQlK2vZw # VRIL, Black Goo, and Agartha – a deep diving conversation
+- BxzQtqoqvZ0 # A Higher Consciousness & How to Access It - Alan Watts (Full Lecture)
+- PLHgO60pU2I # Our Role In Evolution | Neale Donald Walsch
 - 4HbcoKGaMPk # Happiness is The Purpose of Your Life! Want to Know Why? - Teal Swan
 - Mmez5HtdSiY # Music for Healing female energy
 - -pML105nHgA # Arnaud Desjardins   etre un avec
@@ -19,6 +25,7 @@
 - yUz-KkuEkQ0 # Zen  - Arnaud Desjardins -  Ici et Maintenant
 - K51jLdp80lY # Divine Masculine and Divine Feminine Healing Meditation
 - wTblbYqQQag # Jim Carrey  - What It All Means | One Of The Most Eye Opening Speeches
+- E-NKrv8YiWk # Nassim Haramein: A Human Being Is An Expression Of The Field
 - LXVrNRo1Zj8 # Alan Watts ~ Are You Tired Of Playing The Social Game?
 - sBAYjJUtigY # Clif High: Temporal Awareness, Cryptocurrencies, The Yogi vs.The Bluebirds
 - iiIJOMU0a78 # How To Exit The Reincarnation System. Listen Carefully
@@ -26,9 +33,11 @@
 - 15pOr1E6hvc # We Are From the Future
 - Sccm6Z2mfEM # Start Your Morning With This One Powerful Practice | Gurudev Sri Sri Ravi Shankar
 - NyvyhDtFSZo # TFS vs. Navy Piratez
+- PNm7y1nvLsA # Nassim Haramein - Energy Autonomy - Pranic Consciousness Summit
 - X_0r0TvrzfY # EE Raw: Are We Living in a Simulation? An impromptu conversation with claudia and christine
 - 4Zgwz_m7sRs # The Roots of Religion: Genevieve Von Petzinger at TEDxVictoria
 - Mjwdn0XAjgk # Spiritual teacher tells all, before he dies. Incredible!
 - JnbCqSFzP_o # Radioscopie 1978   André Van Lysebeth
+- nRSBaq3vAeY # New Experiments Show Consciousness Affects Matter ~ Dean Radin, PhD
 - ZqTQqjelzwg # Breath Made Visible (Trailer)
 - 711VklH-4fA # 10 Times Michio Kaku Arguments Blew Our Minds
