--- a/ytube/_data/lists/techno-keys.yml
+++ b/ytube/_data/lists/techno-keys.yml
@@ -2,12 +2,16 @@
 - Sddb0Khx0yA # Donald Sadoway: The missing link to renewable energy
 - zNVQfWC_evg # Quantum Fields: The Real Building Blocks of the Universe - with David Tong
 - O6xWhWnI6t4 # LIVING WATERS: Sound Frequencies & CYMATICS
+- cD_WlVdeozE # Dr. Walt Russell on God And Technology
 - GHoJxcnaNxI # Scientists Aren&#39;t Going to Tell You This! (2017-2018)
+- jMRz-muceGQ # Did God Create the Internet? The Impact of Technology on Humanity
 - Pjyo2uILcOs # Martin Becze: Interplanetary OS
 - fvrUsAxTuJc # 5 INVENTIONS THAT WILL BLOW YOUR MIND_HD
+- EVDmi7zWtyE # Gods and Robots: Myths, Machines, and Ancient Dreams of Technology, Adrienne Mayor
 - UzT3Tkwx17A # The Future of Artificial Intelligence Documentary 2018
 - eUQzAhOVj70 # Andrew &quot;bunnie&quot; Huang - Leading-edge Technologies Session「Synthesis of Matter, Information and Life」
 - e1nTInfUBec # Anonymous - What is Happening to Our World... (2018-2019)
+- FzitBZApt0Q # Prof. Yuval Harari - How Technology Will Turn Men Into Gods
 - knrHPneSN10 # Nuclear Fusion Energy: The Race to Create a Star on Earth
 - 1BXYSGepx7Q # What you need to know about CRISPR | Ellen Jorgensen
 - vO-1l0lXR_U # Hutchison demonstrates Zero Point Energy
@@ -19,9 +23,12 @@
 - IJ9xZcKNmTI # High tech Dairy Farming with Advanced Technology
 - DyxgDM8O8OM # Meet the most lifelike robot ever created
 - 3AtBTP0Hf4g # How Do They Make Lava Lamps?
+- yAud1iynheY # Playing God: Should anyone be allowed edit their DNA using CRISPR technology?
 - TdBAHexVYzc # How CRISPR lets us edit our DNA | Jennifer Doudna
 - LEx6K4P4GJc # This computer will grow your food in the future | Caleb Harper
+- LHS0V1ejHr8 # Nassim Haramein - Feedback / Feedforward & Creating Our Reality
 - nE819PPCA5o # Intel&#39;s New 49-qubit Quantum Chip &amp; Neuromorphic Chip
+- efk5uB7hhi8 # Nassim Haremein : The Physics of Consciousness 2008-
 - XZmGGAbHqa0 # Inside a Google data center
 - wkCmX24PRKE # A &quot;Eureka&quot; for Solar Energy | Bert Conings | TEDxUHasselt
 - 5Xr_07Ake2Y # BrainHub Panel Discussion: Downloading Consciousness: Connectomics and Computer Science
