--- a/ytube/_data/lists/transhumanism-keys.yml
+++ b/ytube/_data/lists/transhumanism-keys.yml
@@ -5,5 +5,7 @@
 - v_UsPesr9h4 # Model Boat - Vospers Rescue Launch
 - GgTwa3CPrIE # Beyond bionics: how the future of prosthetics is redefining humanity
 - Ho4761LsOgs # Transhumanism Rise of the Human Gods &amp; Humanoids 2015 Documentary
+- KscnT6FxMIQ # Becoming immortal - VPRO documentary - 2018
 - cG9P8DLuh0U # What is a targeted individual
+- hRuBZLe8vfs # BBC Documentary - Hyper Evolution : Rise Of The Robots (Part 1)
 - U2UWkGfd7fg # Transhumanism &amp; Man Merging With Machine: Progress In 2016
