--- a/ytube/_data/lists/wierd-keys.yml
+++ b/ytube/_data/lists/wierd-keys.yml
@@ -8,6 +8,7 @@
 - kGfQQIiBDzo # Ramana Maharshi Rare video (69th Birthday celebration December 1948)
 - jTIbinBBCiY # Pre Ice Age Construction That we would be Hard Pressed to Re-create Today
 - i7I9RCvUGgc # Proof Someone Has Been Hiding Our True History Documentary
+- mH0sIjAHBVY # Hidden Secrets of Easter Island
 - 1-YuZHxUXPE # 10 Superpowers Monks Have in Real Life
 - -lhR7GAtMjA # IS SOPHIA THE ARTIFICIAL INTELLIGENT ROBOT REALLY CAPABLE OF FEELING HUMAN EMOTIONS?
 - A1gaEz76XCc # NARONIA &amp;  The Secret Knowledge of the Elite
