--- a/ytube/_data/lists/tango-experimental-keys.yml
+++ b/ytube/_data/lists/tango-experimental-keys.yml
@@ -2,6 +2,7 @@
 - C4cmJ7QqBMI # Bebe - Siempre Me Quedara
 - IIYAMOb22WE # Kida - Malli
 - ZYlNjQ5TTF4 # Enigma - Amen (Official Video)
+- IoN_ZaoFSW8 # Kerala Dust - Maria (official video)
 - KfyBHZc9rK4 # Cher - Bang Bang (My Baby Shot Me Down) (Official Video) | Original Version
 - Ez62cQPYyI8 # Oblivion by Nadja Kossinskaja
 - NenPwk0noTg # Les Frères Scotch - La nuit
