--- a/ytube/Gemfile
+++ b/ytube/Gemfile
@@ -9,4 +9,5 @@ source "https://rubygems.org"
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
 gem "jekyll", "> 3.8.6"
+gem "jekyll-paginate"
 
