--- a/ytube/_data/lists/healing-keys.yml
+++ b/ytube/_data/lists/healing-keys.yml
@@ -2,6 +2,7 @@
 - McF3r7arhmc # Physics Of Crystals by LesBrown
 - _TokqrtFfi8 # The Most Powerful Strategy for Healing People and the Planet | Michael Klaper | TEDxTraverseCity
 - J-I2eScPkEw # How healthy living nearly killed me | AJ Jacobs
+- 8YENYsKnI7E # Guided Sleep Talkdown: Deep Sleep for Busy Minds and Anxiety Guided Meditation and Self-Hypnosis
 - BFbCYOfxOnI # Nassim Haramein Unified Field Theory / Theory of Everything [FULL VIDEO]
 - 3soroEZ3yBk # Sadhguru - Learn How To Sleep Correctly | TRY IT TONIGHT!
 - YhDB37KwNv8 # Zero Point Energy Healing tools - Part 2
