--- a/ytube/_data/lists/spiritual-keys.yml
+++ b/ytube/_data/lists/spiritual-keys.yml
@@ -11,6 +11,7 @@
 - UyXxGK-hwh4 # Sound Frequencies in Water: A=440 Hz &amp; A=432Hz Using Sine, Square &amp; Sawtooth Waves
 - 2P7XGQBk75g # GREAT SAINTS OF INDIA
 - XBEQXgUyR2c # FRB 121102 Audio Analysis
+- vPfP6w6j-hU # SADHGURU DESTROYS Zakir Naik's SHIRK Branding
 - XqzBF4NREWk # From Ego Mind To God Consciousness
 - QdzaR0FA7Co # Nassim Haramein on the Arrow Of Time & Spacememory
 - hBl0cwyn5GY # Banned TEDTalk about Psychic Abilities | Russell Targ | suespeaks.org
