--- a/ytube/_data/lists/techno-keys.yml
+++ b/ytube/_data/lists/techno-keys.yml
@@ -25,6 +25,7 @@
 - 3AtBTP0Hf4g # How Do They Make Lava Lamps?
 - yAud1iynheY # Playing God: Should anyone be allowed edit their DNA using CRISPR technology?
 - TdBAHexVYzc # How CRISPR lets us edit our DNA | Jennifer Doudna
+- xJ9j7obfzPU # Scientists do Bizarre Things... Not the Aghori - Sadhguru
 - LEx6K4P4GJc # This computer will grow your food in the future | Caleb Harper
 - LHS0V1ejHr8 # Nassim Haramein - Feedback / Feedforward & Creating Our Reality
 - nE819PPCA5o # Intel&#39;s New 49-qubit Quantum Chip &amp; Neuromorphic Chip
