--- a/ytube/_data/lists/tango-workshop-keys.yml
+++ b/ytube/_data/lists/tango-workshop-keys.yml
@@ -9,3 +9,6 @@
 - 9qWs8y69o5A # Assassin&#39;s Tango by Charlotte &amp; Cedric
 - nJX0o_q3xeA # Do i Wanna know? Tango and gancho by Charlotte &amp; Cedric
 - Bkf9qqnu9cE # Neo Tango - C &amp; C - California Dreaming
+- WWdXq8sCIdI # Back Sacada, Boleo, Gancho | michelle + joachim
+- bLZuK-O7M3s # Mundial de Tango 2016, Semif Escenario 11 Campeones de Cali, Colombia y Mendoza Argentina
+- B0jAvZJEm6I # "VUELVO AL SUR" - Im Scheinwerferlicht / Con toda Iluminacio / Under Spotlight
