--- a/ytube/_data/lists/capitalism-keys.yml
+++ b/ytube/_data/lists/capitalism-keys.yml
@@ -1,9 +1,18 @@
 --- 
 - 3WBlqDeHiXI # Globalized capitalism explained through bananas | DW Documentary
 - CRE87BLnAaQ # Le LAIT - Ce con ne nous dit pas #3
+- X2LwIiKhczo # The Spectacular Rise and Fall of WeWork 
 - odKmGEU57ZQ # La face cachée du billet de 500 euros
 - znh6jwniQy4 # 10 Expert Predict When The Imminent Economic Collapse &amp; Stock Market Crash Will Happen
 - c0bsKc4tiuY # Why you should make useless things | Simone Giertz
 - m1TzDfr77Z8 # Date Limite : 20 juillet 2019, Tenons bon !
 - IVLmkxP6xvk # Keiser Report: American Capitalist Cancer (E1251)
 - th3KE_H27bs # The dirty secret of capitalism -- and a new way forward | Nick Hanauer
+- QozGSS7QY_U # Panic: The Untold Story of the 2008 Financial Crisis | Full VICE Special Report | HB
+- QE3QwTA5ujE # Jamie Dimon On The 2008 Crisis
+- X2LwIiKhczo # The Spectacular Rise and Fall of WeWork
+- BBmmMj_maII # How McKinsey Became One Of The Most Powerful Companies In The World
+- t6m49vNjEGs # How the rich get richer – money in the world economy | DW Documentary
+- PXgUea6JVcI # Why Goldman Sachs Went From Investing For The Rich To Targeting Everyone
+- l312_qj6quQ # Banking: A Crack In the Swiss Vault
+
