--- a/ytube/_data/lists/global-agenda-keys.yml
+++ b/ytube/_data/lists/global-agenda-keys.yml
@@ -13,6 +13,7 @@
 - Qg3lwBBPZ5M # Star Simpson&#39;s first interview on Boston airport LED terror scare
 - mII9NZ8MMVM # The Collapse of The American Dream Explained in Animation
 - ZgwgUujn4Uk # Economic Collapse Confirmed! China &#39;Weaponize&#39; Yuan For Dollar Collapse - 2018 Stock Market CRASH!
+- tICL-lwI7KM # A Look Inside Russia’s Creepy, Innovative Internet
 - dvJSK4viVMs # Paul Tudor Jones II: Why we need to rethink capitalism
 - WLDdS4_Qneg # Wireless Warfare Exposed - Declassified Military Doc Proves Smart Phones Are Killing Mankind
 - RbUv3gednTQ # THE MARK: Mark of the Beast, Alien Agenda, Raeliens & Paradism
