--- a/ytube/_data/lists/hackers-keys.yml
+++ b/ytube/_data/lists/hackers-keys.yml
@@ -6,6 +6,7 @@
 - T_SwN_iFDbA # The Immune System Hack (they don&#39;t want you to know about)
 - RFrKYYNiyZE # Hacker Wins Election As Pirate Party Leader
 - KwJyKmCbOws # Why I teach people how to hack | Ýmir Vigfússon | TEDxReykjavík
+- aqdYbwY9vPU # Super Hacker George Hotz: I Can Make Your Car Drive Itself for Under $1,000
 - GWr5kbHt_2E # Can you hack it? Hacking Documentary
 - vJi3_znm7ZE # Hacking Reality [Official Film]
 - eRmZ_sNf2mE # The Simulation Theory - Hacking Reality (Must See)
