--- a/ytube/_data/lists/leadership-keys.yml
+++ b/ytube/_data/lists/leadership-keys.yml
@@ -1,6 +1,7 @@
 --- 
 - j7ff9vBeo_Y # Power 2017 Workshop | Think Out Loud With Jay Shetty
 - CWKEDKAbQus # Why Being Too Nice Leads To Rejection - Marisa Peer
+- JWmafBBMHSk # How to spot a leader in their handwriting | Jamie Mason Cohen | TEDxUBIWiltz
 - fG3EUMArrU0 # How To Find And Pursue Your Passion | Think Out Loud With Jay Shetty
 - OTXUPaQ7EJU # Simon Sinek - Renowned Leadership Expert | Author of Start With Why
 - GbSyvro1Jio # Focus On The Vision | How To Cultivate Powerful Habits
