--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -19,6 +19,7 @@
 - jsUuHKnOPTI # The Most Dangerous Waters In The World
 - iFgmTm4gQSw # NewTek NDI and Live Video Production with vMix.
 - S_RiXp3VyqE # Mix - Sri songs
+- NZR_vMTLfIk # Drawing Conclusions: Is renting really a waste of money?
 - JbQeABIoO6A # Next Future Terrifying Technology Will Blow Your Mind
 - WGTxqhSN8bE # Estas Tonne - Internal Flight
 - PfEWKwsagkI # BOND - live from the Royal Albert Hall.avi
@@ -2058,5 +2059,6 @@
 - vvzLbJrOnmc # Tango-Vals &quot;Flor de Lino&quot;. María Inés Bogado &amp; Sebastián Jiménez with &quot;Solo Tango&quot; orchestra. Танго
 - LKLVGXXYJ0 # Lady Gaga - John Wayne
 - Hwom46OTKbY # ILS VEULENT QUE VOUS RESTIEZ PAUVRE
+- l71HR9F5Hoc # Trump explodes at Reuters reporter asking about Ukraine
 - pmBiw2yCbdw # Elvellon - Born From Hope (Official Video) HD
 - aySea-YvWHk # Within Temptation - M&#39;era Luna Festival 2016 (Full Show) HD
