--- a/ytube/_data/lists/solutions-keys.yml
+++ b/ytube/_data/lists/solutions-keys.yml
@@ -2,6 +2,7 @@
 - sWN13pKVp9s?t=710
 - aFaOr05gvpI # Storing solar energy in the strangest places: Will Chueh at TEDxStanford
 - MKU5bFusPMs # Créer le job de ses rêves, c&#39;est possible ! | Matthieu Dardaillon | TEDxIESEGLille
+- bfr82RB72U8 # Can Sea Water Desalination Save The World?
 - hF1S4Iniyt0 # Drought-resistant plants making deserts in China green
 - eIVO444M4kM # John Kaisner The Natural Farmer - Tropics - #21 How to Fix Sandy Soil Using Weeds
 - vpTHi7O66pI # How to green the world&#39;s deserts and reverse climate change | Allan Savory
