--- a/ytube/_data/lists/spiritual-keys.yml
+++ b/ytube/_data/lists/spiritual-keys.yml
@@ -1,6 +1,7 @@
 --- 
 - TM6WKeZ43s4 # This Trick Makes You Immune To Illness | Wim Hof on Impact Theory
 - y4Dz1zFEy4E # The most realistic brain visualization ever made. Visualisation du cerveau
+- zzvp6l9JvHg # Sadhguru on Jiddu Krishnamurti & His Life
 - HTNn0jMqf8Q # What Gives More Pleasure Than Sėx? Answered by Swami Sri Yukteswar || Brahmacharya ||
 - UAnySx2lHC8 # THIS MAN DIED DURING SURGERY, MET GOD &amp; ASKED HIM, &quot;WHAT&#39;S THE MEANING OF LIFE?&quot;
 - pAVNzsO4g9w # Arnaud Desjardins : Un bonheur non dépendant
