--- a/ytube/_data/lists/wierd-keys.yml
+++ b/ytube/_data/lists/wierd-keys.yml
@@ -1,7 +1,9 @@
 --- 
 - HbAAwr8IaG4 # 12,000 Year Old Anunnaki Temple Discovery That Left Historians Speechless
+- _njz8-FHhAo # Malawi's Human Harvest - Full documentary - BBC Africa Eye
 - t9OThVe92GI # Is Mahavatar Babaji still alive? Sadhguru reveals the TRUTH **RARE VIDEO**
 - YXxOgX05UpQ # SOPHIA: Sophia, Antichrist Spirit, Divine Feminine &amp; Gnosticism
+- W2Cv5hZfOmk # Siberian Cult Leader Thinks He's Jesus
 - TorPh4wpPSA # What You&#39;re About to See Should Scare You!
 - TOPNDm3OBPc # Monoatomic Gold the Most Heavily Guarded Secret of the Ancient World
 - 9btcfCWL5Jg # This is Actually Happening World Wide!
@@ -11,6 +13,7 @@
 - mH0sIjAHBVY # Hidden Secrets of Easter Island
 - 1-YuZHxUXPE # 10 Superpowers Monks Have in Real Life
 - -lhR7GAtMjA # IS SOPHIA THE ARTIFICIAL INTELLIGENT ROBOT REALLY CAPABLE OF FEELING HUMAN EMOTIONS?
+- W2Cv5hZfOmk # 
 - A1gaEz76XCc # NARONIA &amp;  The Secret Knowledge of the Elite
 - Oq6qGc_njDA # Something Strange Is Happening To Taylor Swift : Look What They Made Her Do!
 - pcnc2polvzo # The KING of RANDOM &amp; the Hacksmith!
@@ -104,6 +107,7 @@
 - hWe62uHpikY # The Bible says this is exactly how it would look before the End (2017-2018)
 - xSfSwzsmQjM # Ellie Undercover | Rent For Sex
 - 1RA2Zy_IZfQ # &quot;Is Hypnosis Fake?&quot; Hypnotist stuns TEDX crowd
+- RurapqDzD9E # Qui était Jésus Christ ? (L'ombre d'un doute)
 - KVz_bq7r3gA # Secrets of Occult Symbolism - NCR
 - sONLWHuYo7w # The Great Pyramid Mystery Has Finally Been Solved
 - 8W3y3Qh8R1s # BELIEVE YOUR OWN EYES -  9/11 -  “NO PLANES”
