--- a/ytube/_data/lists/attack-keys.yml
+++ b/ytube/_data/lists/attack-keys.yml
@@ -2,3 +2,4 @@
 - CashAq5RToM # The Most Dangerous Town on the Internet - Where Cybercrime Goes to Hide
 - ca-C3voZwpM # How Israel Rules The World Of Cyber Security | VICE on HBO
 - koi54cPRlhQ # 21st Century Hackers - Documentary 2018
+- uMDcHImCs3k # Thailand's Cyber Wars
