--- a/ytube/_data/lists/AI-keys.yml
+++ b/ytube/_data/lists/AI-keys.yml
@@ -1,6 +1,7 @@
 --- 
 - BrNs0M77Pd4 # Artificial Intelligence: it will kill us | Jay Tuck | TEDxHamburgSalon
 - Njbze8cS8WE # How Technology Will Take Your Job and Create God
+- TFk_w_N2xXM # The Elephant in the Brain | Robin Hanson | TEDxAsburyPark
 - mQO2PcEW9BY # A.I. is Progressing Faster Than You Think!
 - LPT4r4AnFZA # The inevitable merger of IQ and EQ in technology - Rana el Kaliouby (Affectiva)
 - R_5sAburz5Q # Why AI Is The Most Dangerous Thing You Can Imagine
@@ -22,6 +23,7 @@
 - iFTWM7HV2UI # We&#39;re building a dystopia just to make people click on ads | Zeynep Tufekci
 - Ls1_tqlpMww # AI on Track to Achieving Superintelligence?
 - UzT3Tkwx17A # The Future of Artificial Intelligence Documentary 2018
+- 9qcIsjrHENU # The Next Great Era: Envisioning A Robot Society: Robin Hanson at TEDxTallinn
 - w1NxcRNW_Qk # Two robots debate the future of humanity
 - Dk7h22mRYHQ # The Rise of AI
 #- Y5KWcIRriT8 # The Rise of AI Deep Learning - Documentary 2018 HD
