--- a/ytube/_data/lists/TEDs-keys.yml
+++ b/ytube/_data/lists/TEDs-keys.yml
@@ -1,5 +1,6 @@
 --- 
 - wX78iKhInsc # How to escape education's death valley | Sir Ken Robinson
+- aspMV6ERqpo # The great filter | Robin Hanson | TEDxLimassol
 - sgWyolwBGgE # How do I deal with a bully, without becoming a thug? | Scilla Elworthy | TEDxExeter
 - MknV3t5QbUc # Game theory challenge: Can you predict human behavior? - Lucas Husted
 - 0R9zjn9BBvA # You are fluent in this language (and don&#39;t even know it) | Christoph Niemann
@@ -12,6 +13,7 @@
 - FFG2rilqT2g # Marc Abrahams: A science award that makes you laugh, then think
 - XZFKpkDUMB4 # How Music Can Be Better For You Than Sex and Chocolate: Deanna Choi at TEDxQueensU
 - QzPbY9ufnQY # How do you define yourself? | Lizzie Velasquez | TEDxAustinWomen
+- Gd9GOoITfXY # What If Everything Changed? | Robin Hanson | TEDxNorrköping
 - MdZAMSyn_As # The Skill of Humor | Andrew Tarvin | TEDxTAMU
 - erpPQDSWD0k # Healing illness with the subconscious mind | Danna Pycher | TEDxPineCrestSchool
 - cmF_HbP-jd0 # The power of music | Umi Garrett | TEDxOrangeCoast
