--- a/ytube/_data/lists/economy-keys.yml
+++ b/ytube/_data/lists/economy-keys.yml
@@ -1,11 +1,24 @@
 --- 
 - TA7zeaQXZwk # Heirship Economy an Introduction
+- i6ZcgumHtiM # Morning Keynote: "Financial Engineering and Its Discontents" by Dr. Emanuel Derman
+- DanOzH5LmZE # Professor Emanuel Derman: Models Behaving Badly
+- AtjjMIeUJbU # Emanuel Derman: How is the mindset of a quant changing?
+- ed2FWNWwE3I # Quants - The Alchemists of Wall Street - VPRO documentary
+- cvC1bBdDyKE # Emanuel Derman, Head of Risk at Prisma Capital Partners - #PreMarket Prep for August 28, 2014
+- qTBH5sJYnn4 # There's Enough Math in Finance Already. What's Missing is Imagination.
+- ZNqkyKNobLE # Is the world going quants mad? Dr Paul Wilmott
+- DanOzH5LmZE # Professor Emanuel Derman: Models Behaving Badly
+- gjVDqfUhXOY # Billionaire Mathematician - Numberphile
+- Qd2Kh80ZK6k # Interview with a Quant from Two Sigma (My brother)
+- qvFYzJ8-zbQ # How to Become a Quant: Core Topics
+- 9jx7f2n4eUQ # Real vs Fake Financial Engineering Degrees
 - 6UvQCeJ6xA0 # Changer le monde sans travailler | Lionel &quot;Ploum&quot; Dricot | TEDxLiège
 - yceuC1O-Q_8 # Arun Sundararajan: &quot;The Sharing Economy and the Future of Digital Governance&quot; | Talks at Google
 - pKO-cNnWV98 # Is Deutsche Bank About To CRASH? - Bank Lays Off 10,000 Employees!
 - B5-IpSYbeiQ # The Biggest Lie In Investing That You Believe In | TEDx Talk
 - TYwA0TYPaQ0 # Keiser Report: Future of Bitcoin (E1245)
 - yd6cqJqygt0 # STUDENT LOAN DEBT SLAVERY
+- zrS-OkFTLkc # Bernard Friot : Théorie du revenu universel / salaire à la qualification ? [EN DIRECT]
 - V8kzYEQbHvs # What if we had an economy based on abundance: Faiza Syed at TEDxYouth@Winchester
 - bKhR9i5CGkA # How Socialism Ruined My Country
 - swB7Ivct8d8 # How we&#39;ll earn money in a future without jobs | Martin Ford
@@ -26,6 +39,7 @@
 - GgoT1af27IY # How to Raise Kids Who Are Smart About Money
 - PuZgkL5BEBk # Free currencies | Jean-François Noubel | TEDxParis
 - WtKQLYy5wBg # Nomi Prins - Warns A Ticking Time Bomb Now Threatens The World Financial System update 2017
+- 4liskT_XaUk # Santé VS Nourriture ? Isabelle Saporta [EN DIRECT]
 - fSQgCy_iIcc # POLITICAL THEORY - Karl Marx
 - SuFKONsatkc # What You Weren’t Taught About Making Money | Sarah Potter | TEDxCollingwood
 - dvJSK4viVMs # Paul Tudor Jones II: Why we need to rethink capitalism
