--- a/ytube/_data/lists/french-keys.yml
+++ b/ytube/_data/lists/french-keys.yml
@@ -1,4 +1,5 @@
 --- 
+- jMZCN7jPaaA # Psychologie des foules : MANIPULER le peuple avec Gustave Le Bon ! (résumé)
 - Abz3Ab9HhaQ # Ces financiers qui dirigent le monde - BlackRock | ARTE
 - Q8qZvtreTck # Water, Le Pouvoir Secret de l'Eau // Extrait 20min Officiel (HD) - VF
 - Ho5TzMP6DxE # Se confronter à la réalité entrepreneuriale - Oussama Ammar, co-fondateur de The Family
