--- a/ytube/_data/lists/governance-keys.yml
+++ b/ytube/_data/lists/governance-keys.yml
@@ -3,6 +3,7 @@
 - zB6EUnq6yX0 # How to get from &quot;limited government&quot; to anarchism with Larken Rose
 - kEc-x7jrvMQ # How Big Government Backed Bad Science Made Americans Fat
 - X_giV5sjNxY # Proof the Shadow Government exists - Unacknowledged and Sirius Documentary
+- S0dkMcZvlhI # Robin Hanson on Governance
 - EPjrFjAxwlw # 10 Myths About Government Debt
 - dswbe1S6LuA # Elon Musk Sends Final Warning To The Government
 - FRXH1cMQpqQ # Your Government LIES!! Scientific PROOF Adam and Eve Existed!!
