--- a/ytube/_data/lists/robots-keys.yml
+++ b/ytube/_data/lists/robots-keys.yml
@@ -13,11 +13,14 @@
 - cdx0oYLXT70 # Le robot Thymio pour illustrer la balance romaine
 - IxuU5L2MEII # ai.bythebay.io: George Hotz, Self-Driving Lessons from Comma AI
 - FBl4Y55V2Z4 # Inside Alibaba&#39;s smart warehouse staffed by robots
+- 9Ix0o2iEcww #
+- N4I2If3x_9g # Robin Hanson: "The Age of Em: Work, Love and Life when Robots Rule the Earth" | Talks at Google
 - CjsDtXYh3k4 # FEMINIST LESBIAN LIVES AS A MAN FOR 18 MONTHS- EYE OPENING ACCURATE
 - rRU62Csr_jI # Neil Harbisson and Moon Ribas: &quot;What&#39;s it like to be a cyborg?&quot; | Talks at Google
 - MLKyBXUfTHQ # Martin Luther King Jr. &#39;Birth of a New Nation&#39; April 7, 1957
 - ss3-pb-7_FI # Unboxing Akira 2019 AI Model Japanese Android Female Robot Prototype Goes Very Wrong
 - FVrhv6CNtoo # plateforme-inertielle.mov
+- Y4_NhIDJx_E # "Futarchy": Can speculative markets govern? | Robin Hanson & Simon DeDeo
 - aRKvl0xrcFQ # The Try Guys Raise Robot Babies • Motherhood: Part 3
 - 4DKrcpa8Z_E # Inside A Warehouse Where Thousands Of Robots Pack Groceries
 - 8RiEDT8bsOs # thymio II sur balle / thymio II robot on a ball
