--- a/ytube/_data/lists/socialtech-keys.yml
+++ b/ytube/_data/lists/socialtech-keys.yml
@@ -5,3 +5,6 @@
 - LXVrNRo1Zj8 # Alan Watts ~ Are You Tired Of Playing The Social Game?
 - n61in9QWbc # Collective Decision Making Meeting pt1
 - q7LRxKHdao8 # Want to Make Better Decisions? Know the Difference between Engineering and Design Thinking
+- VNGFep6rncY # Why the majority is always wrong | Paul Rulkens | TEDxMaastricht
+- mUUk0jSndoc # EB98 – Robin Hanson: Futarchy, Prediction Markets And The Challenge Of Disruptive Technology
+- iRDIhxeerBA # Robin Hanson: Enlightening Hidden Motives & Social Agendas @Foresight Institute
