--- a/ytube/_data/lists/societies-keys.yml
+++ b/ytube/_data/lists/societies-keys.yml
@@ -6,10 +6,16 @@
 - BTmDetKhNaM # Anonymous - This will Change How You See Everything... (2018-2019)
 - H6n3iNh4XLI # How to Have a Good Conversation | Celeste Headlee | TEDxCreativeCoast
 - Ez0B3lktKI4 # What Facebook Knows But Is NOT Telling You
+- KGoXNQaHdXE # Conférence (Partie 1) Psychologie des Foules et les Indicateurs Techniques 280314
+- 0zz56OIDvmc # Conférence (Partie 2) Psychologie des Foules et les Indicateurs Techniques - 280314
+- 0zz56OIDvmc # Conférence (Partie 3) Formation Psychologie des Foules et les Indicateurs Techniques - 280314
 - _gDeTLnmX5M # The 6th Mass Extinction | Dr Dominique Dodge-Wan | TEDxCurtinUSarawak
+- 9Ix0o2iEcww # The Age of Em | Robin Hanson | TEDxImperialCollege 
+- N4I2If3x_9g # Robin Hanson: "The Age of Em: Work, Love and Life when Robots Rule the Earth" | Talks at Google
 - PmEDAzqswh8 # You Will Wish You Watched This Before You Started Using Social Media | The Twisted Truth
 - uAb-mSq615g # Our Post-Human Future | David Simpson | TEDxSantoDomingo
 - O-WXOaAnipM # Humanity on the Edge of Extinction | Anders Sandberg | TEDxVienna
+- 9qcIsjrHENU # The Next Great Era: Envisioning A Robot Society: Robin Hanson at TEDxTallinn
 - wuJhD5TkX-0 # Humanity at the Crossroads | Sheldon Solomon | TEDxSkidmoreCollege
 - ofaoiHYKtlc # Seven surprising results from the reduction of Arctic Sea ice cover | David Barber | TEDxUManitoba
 - HEfpxiUIZPs # Hip Ups
