--- a/ytube/_data/lists/tango-workshop-keys.yml
+++ b/ytube/_data/lists/tango-workshop-keys.yml
@@ -11,4 +11,5 @@
 - Bkf9qqnu9cE # Neo Tango - C &amp; C - California Dreaming
 - WWdXq8sCIdI # Back Sacada, Boleo, Gancho | michelle + joachim
 - bLZuK-O7M3s # Mundial de Tango 2016, Semif Escenario 11 Campeones de Cali, Colombia y Mendoza Argentina
+- "-7S0Rnvb24Y" # Tango "El huracan". Julian Sanchez and Melina Mourino. Танго. Хулиан Санчес и Мелина Моуриньо
 - B0jAvZJEm6I # "VUELVO AL SUR" - Im Scheinwerferlicht / Con toda Iluminacio / Under Spotlight
