--- a/ytube/_data/lists/techno-keys.yml
+++ b/ytube/_data/lists/techno-keys.yml
@@ -4,8 +4,11 @@
 - O6xWhWnI6t4 # LIVING WATERS: Sound Frequencies & CYMATICS
 - cD_WlVdeozE # Dr. Walt Russell on God And Technology
 - GHoJxcnaNxI # Scientists Aren&#39;t Going to Tell You This! (2017-2018)
+- aMwBtFdLdAc # ROBIN HANSON: THE AGE OF MIND UPLOADING
 - jMRz-muceGQ # Did God Create the Internet? The Impact of Technology on Humanity
 - Pjyo2uILcOs # Martin Becze: Interplanetary OS
+- XS2UWYuh5u0 # Computers can see. Now what? | Joseph Redmon | TEDxGateway
+- Cgxsv1riJhI # How computers learn to recognize objects instantly | Joseph Redmon
 - fvrUsAxTuJc # 5 INVENTIONS THAT WILL BLOW YOUR MIND_HD
 - EVDmi7zWtyE # Gods and Robots: Myths, Machines, and Ancient Dreams of Technology, Adrienne Mayor
 - UzT3Tkwx17A # The Future of Artificial Intelligence Documentary 2018
